@@ -131,17 +131,6 @@ namespace MUSIC {
   }
 
 
-  bool
-  Synchronizer::simulating ()
-  {
-#if 0
-    return localTime->integerTime () >= 0;
-#else
-    return true;
-#endif
-  }
-
-
   void
   OutputSynchronizer::tick ()
   {
@@ -266,12 +255,7 @@ namespace MUSIC {
   bool
   InterpolationInputSynchronizer::sample ()
   {
-#if 0
-    return (localTime->integerTime () > remoteTime.integerTime ()
-	    && localTime->integerTime () + localTime->tickInterval () >= 0);
-#else
     return localTime->integerTime () > remoteTime.integerTime ();
-#endif
   }
 
 
